feat: DB-53 | add route to get user by username
